--- a/sourcecode/index.html
+++ b/sourcecode/index.html
@@ -107,7 +107,7 @@
 				<div class="welcome-hero-txt">
 					<h2>AARDHIK</h2>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore   magna aliqua. 
+						pre kg b, bishop remegius cbs school 
 					</p>
 					<button class="welcome-btn" onclick="window.location.href='#'">contact us</button>
 				</div>
